--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "homepage": "https://github.com/matiassingers/generator-simple-node-package",
   "dependencies": {
-    "yeoman-generator": "^0.17.0"
+    "yeoman-generator": "^0.17.0",
+    "npm-name": "~1.0.1"
   },
   "peerDependencies": {
     "yo": ">=1.0.0"
