--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "homepage": "https://github.com/matiassingers/generator-simple-node-package",
   "dependencies": {
     "yeoman-generator": "^0.17.0",
-    "npm-name": "~1.0.1"
+    "npm-name": "~1.0.1",
+    "shelljs": "~0.3.0"
   },
   "peerDependencies": {
     "yo": ">=1.0.0"
