--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-simple-node-package",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "start a simple node module project, including CLI",
   "main": "app/index.js",
   "engines": {
@@ -10,7 +10,11 @@
     "app"
   ],
   "keywords": [
-    "yeoman-generator"
+    "yeoman-generator",
+    "node",
+    "generator",
+    "scaffold",
+    "module"
   ],
   "repository": {
     "type": "git",
