Add test script to package.json

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.2.1",
   "description": "start a simple node module project, including CLI",
   "main": "app/index.js",
+  "scripts": {
+    "test": "mocha"
+  },
   "engines": {
     "node": ">=0.10.0"
   },
